# imperial-allocator

./: .gitignore  main.py  makefile  pyproject.toml
allocator/: config.py  utils.py
allocator/allocators/: factory.py  hungarian.py
allocator/balancers/: dnp.py
allocator/loaders/: csv_loader.py  factory.py
allocator/output/: allocations.py  donotplays.py  publications.py
data/: sample_throwing_penalised_signups_dataset.csv  sample_vanilla_signups_dataset.csv
src/allocator/: config.py  main.py  utils.py
src/allocator/allocators/: base.py  factory.py  hungarian.py
src/allocator/balancers/: dnp.py
src/allocator/domain/: models.py
src/allocator/loaders/: base.py  csv_loader.py  factory.py
src/allocator/output/: allocations.py  base.py  donotplays.py  publications.py
